--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -545,6 +545,12 @@ body {
 
 /* ********************************************************** auth section */
 
+/* input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+} */
+
 .auth__container {
   position: relative;
   width: 100%;
