--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -140,10 +140,17 @@ body {
   padding-right: 9.948vw;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 1000px) {
   .header {
-    padding-left: 0.521vw;
-    padding-right: 0.521vw;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .header {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -284,7 +291,7 @@ body {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1;
+  z-index: 9999999;
   width: 250px;
   height: 100%;
   padding: 50px 10px 0 30px;
@@ -530,13 +537,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   position: relative;
   width: 100%;
   height: 100%;
+  padding-left: 11.406vw;
+  padding-right: 8.125vw;
 }
 
 .auth__container-design-top {
   position: absolute;
   top: 0;
-  left: 40%;
-  width: 249px;
+  left: 45%;
+  width: 151px;
 }
 
 .auth__container-design-left {
@@ -549,11 +558,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .auth__container-design-bottom {
   position: absolute;
   bottom: 0;
-  left: 0;
+  right: 0;
   width: 100%;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
   .auth__container-design-bottom {
     display: none;
   }
@@ -572,7 +581,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .auth__container--box {
   width: 100%;
   height: 100%;
-  padding-top: 120px;
+  padding-top: 60px;
 }
 
 .auth__container--box-header {
@@ -639,6 +648,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .auth__container--box-input > div {
   margin-top: 59px;
+  max-width: 27.24vw;
+}
+
+@media only screen and (max-width: 1200px) {
+  .auth__container--box-input > div {
+    max-width: 330px;
+  }
 }
 
 .auth__container--box-input-div {
@@ -665,6 +681,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-top: 4px;
   color: #282a2f;
   height: 40px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .auth__container--box-input-div > input {
+    font-size: 16px;
+  }
 }
 
 .auth__container--box-input-div > div {
@@ -973,6 +995,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   position: relative;
 }
 
+@media only screen and (max-width: 1000px) {
+  .terms__bg--content {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .terms__bg--content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .terms__bg--content-middle-left {
   position: absolute;
   top: 263px;
@@ -1057,13 +1093,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   position: relative;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 1200px) {
   .faq__bg--content {
-    padding-left: 1.042vw;
-    padding-right: 1.042vw;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .faq__bg--content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 .faq__bg--content-top-left {
   position: absolute;
   top: 165px;
@@ -1189,7 +1231,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background: #fbfbfb;
   padding-top: 100px;
   padding-bottom: 77px;
+  padding-left: 18.229vw;
+  padding-right: 18.229vw;
   position: relative;
+}
+
+@media only screen and (max-width: 1250px) {
+  .pricing__bg--content {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .pricing__bg--content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .pricing__bg--top-right {
@@ -1253,13 +1311,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .pricing__bg--content-nav {
-  max-width: 800px;
+  max-width: 80%;
   height: 64px;
   margin: 0 auto;
   background: #ffffff;
   overflow: hidden;
   box-shadow: 0px 8px 10px rgba(192, 200, 221, 0.3);
   border-radius: 34px;
+  font-family: var(--circular);
+  font-size: 1.25em;
+  line-height: 25px;
+  color: #2d3136;
+}
+
+@media only screen and (max-width: 1400px) {
+  .pricing__bg--content-nav {
+    font-size: 0.875em;
+  }
 }
 
 .pricing__bg--content-nav-mobile {
@@ -1510,6 +1578,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   position: relative;
 }
 
+@media only screen and (max-width: 1000px) {
+  .contact__bg--content {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .contact__bg--content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .contact__bg--content > span {
   overflow: hidden;
   font-family: var(--compact-thin);
@@ -1603,6 +1685,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: #282a2f;
   margin-top: 5px;
   height: 40px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .contact__input--half > div > input {
+    font-size: 14px;
+  }
 }
 
 .contact__input--full {
@@ -1703,6 +1791,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-top: 13px;
 }
 
+@media only screen and (max-width: 1000px) {
+  .contact__address > p {
+    margin-bottom: 20px;
+  }
+}
+
 .contact__address > div {
   overflow: hidden;
   width: 150px;
@@ -1747,6 +1841,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .about__bg--header-left {
     width: 70%;
     float: left;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .about__bg--header-left {
+    margin-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .about__bg--header-left {
+    margin-left: 10px;
   }
 }
 
@@ -1845,6 +1951,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background: #f4f5f7;
   padding-left: 16.302vw;
   padding-right: 25.26vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  .about__bg--photos {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .about__bg--photos {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .about__bg--photos > p {
@@ -1969,6 +2089,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-right: 11.094vw;
 }
 
+@media only screen and (max-width: 1000px) {
+  .about__bg--community {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .about__bg--community {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .about__bg--community > div {
   padding-bottom: 100px;
   overflow: hidden;
@@ -1978,6 +2112,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   overflow: hidden;
   width: 50%;
   float: left;
+  text-align: center;
 }
 
 @media only screen and (max-width: 800px) {
@@ -2074,9 +2209,32 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .home__content--clients {
   background: #ffffff;
   position: relative;
+  padding-left: 16.719vw;
+  padding-right: 16.719vw;
 }
 
-.home__content--clients > div {
+@media only screen and (max-width: 1100px) {
+  .home__content--clients {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home__content--clients {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.home__content--btm-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 91px;
+}
+
+.home__content--clients-child {
   text-align: center;
   padding: 100px 0;
 }
@@ -2108,7 +2266,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   float: left;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
   .home__content--clients > div > div > div {
     width: 25%;
     float: left;
@@ -2135,6 +2293,22 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .home__content--safety {
   background: #171a3a;
+  padding-left: 20.99vw;
+  padding-right: 14.479vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  .home__content--safety {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home__content--safety {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .home__content--safety > div {
@@ -2187,6 +2361,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   line-height: 28px;
   color: #ffffff;
   margin-top: 5px;
+  max-width: 27.76vw;
+}
+
+@media only screen and (max-width: 900px) {
+  .home__content--safety-left > div > p {
+    max-width: 100%;
+  }
 }
 
 .home__content--safety-right {
@@ -2215,6 +2396,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-repeat: no-repeat;
   background-position: center top;
   background-size: contain;
+  padding-right: 24.167vw;
+  padding-left: 16.302vw;
 }
 
 @media only screen and (max-width: 800px) {
@@ -2310,6 +2493,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .home__content--steps {
   background: #f6f8f9;
   position: relative;
+  padding-left: 20.26vw;
+  padding-right: 16.25vw;
 }
 
 .home__content--steps-design_bottom {
@@ -2337,7 +2522,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   z-index: 1;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
   .home__content--steps-left {
     width: 100%;
     float: left;
@@ -2466,6 +2651,22 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-top: 128px;
   padding-bottom: 100px;
   position: relative;
+  padding-left: 20.365vw;
+  padding-right: 20.365vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  .home__content--why {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home__content--why {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .home__content--why-design-left {
@@ -2578,6 +2779,22 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .home__content--invest {
   background: #f6f8f9;
   text-align: center;
+  padding-left: 15.625vw;
+  padding-right: 15.625vw;
+}
+
+@media only screen and (max-width: 1100px) {
+  .home__content--invest {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home__content--invest {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .home__content--invest-btm {
@@ -2783,6 +3000,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 14.2%;
   float: left;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -2807,26 +3025,43 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .home__content--invest-btm > div > div > img {
-  width: 150px;
+  max-width: 150px;
 }
 
 .home__content--header {
   padding-top: 50px;
   padding-bottom: 300px;
-  background-image: url("./../img/phones.png");
+ /* background-image: url("./../img/phones.png");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: contain;
+  background-size: contain; */
+  padding-left: 12.604vw;
+  position: relative;
+}
+
+.home__content--header-phones {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width:50.458vw;
+}
+
+@media only screen and (max-width: 1000px) {
+  .home__content--header {
+    padding-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .home__content--header {
+    padding-left: 10px;
+  }
 }
 
 @media only screen and (max-width: 700px) {
   .home__content--header {
     padding-top: 50px;
     padding-bottom: 300px;
-    background-image: none;
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-size: contain;
   }
 }
 
