--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1239,7 +1239,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   overflow: hidden;
   background: #fbfbfb;
   padding-top: 100px;
-  padding-bottom: 77px;
+  padding-bottom: 40px;
   padding-left: 18.229vw;
   padding-right: 18.229vw;
   position: relative;
@@ -1302,7 +1302,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-header > span {
   font-family: var(--compact-medium);
-  font-size: 1em;
+  font-size: 0.82em;
+  font-weight: 600;
   line-height: 19px;
   text-align: center;
   text-transform: uppercase;
@@ -1311,7 +1312,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-header > p {
   font-family: var(--tiempos-medium);
-  font-size: 2.375em;
+  font-size: 2em;
+  font-weight: 600;
   line-height: 46px;
   text-align: center;
   color: #2c2e30;
@@ -1321,7 +1323,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-nav {
   max-width: 80%;
-  height: 64px;
+  height: 48px;
   margin: 0 auto;
   background: #ffffff;
   overflow: hidden;
@@ -1352,7 +1354,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 @media only screen and (max-width: 600px) {
   .pricing__bg--content-nav {
     max-width: 800px;
-    height: 64px;
+    height: 48px;
     margin: 0 auto;
     background: #ffffff;
     overflow: hidden;
@@ -1376,11 +1378,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .pricing__bg--content-nav > div {
   width: 20%;
   float: left;
-  height: 64px;
+  height: 48px;
   border-radius: 34px;
   font-family: var(--circular);
-  font-size: 1em;
-  line-height: 25px;
+  font-size: 0.9em;
+  line-height: 11px;
   text-align: center;
   padding-top: 20px;
   cursor: pointer;
@@ -1470,7 +1472,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-price-child > div > span {
   font-family: var(--circular);
-  font-size: 1.125em;
+  font-size: 0.85em;
   line-height: 23px;
   text-align: center;
   color: #818992;
@@ -1478,7 +1480,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-price-child > div > p {
   font-family: var(--circular);
-  font-size: 3.75em;
+  font-size: 3em;
   line-height: 56px;
   text-align: center;
   text-transform: uppercase;
@@ -1494,18 +1496,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-price-child > div > ul > li {
   font-family: var(--circular);
-  font-size: 1em;
+  font-size: 0.8em;
   line-height: 34px;
   text-align: center;
   color: #2d3136;
 }
 
 .pricing__bg--content-price-child > div > div {
-  width: 194px;
-  height: 52px;
+  width: 150px;
+  height: 45px;
   font-family: var(--compact-medium);
-  font-size: 1.0625em;
-  line-height: 20px;
+  font-size: 0.85em;
+  line-height: 16px;
   color: #2dd882;
   border: 1px solid #2dd882;
   box-shadow: 0px 8px 10px rgba(45, 216, 130, 0.3);
@@ -1544,19 +1546,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .pricing__bg--content-features-child > div > div {
   background: rgba(45, 216, 130, 0.1);
   border-radius: 60px;
-  height: 86px;
-  width: 86px;
+  height: 60px;
+  width: 60px;
   margin: auto;
-  padding-top: 25px;
+  padding-top: 17px;
 }
 
 .pricing__bg--content-features-child > div > div > img {
-  width: 40px;
+  width: 22px;
 }
 
 .pricing__bg--content-features-child > div > p {
   font-family: var(--compact-medium);
-  font-size: 1.5em;
+  font-size: 1em;
+  font-weight: 600;
   line-height: 29px;
   text-align: center;
   color: #2c2e30;
@@ -1566,7 +1569,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .pricing__bg--content-features-child > div > span {
   font-family: var(--compact-thin);
-  font-size: 1.0625em;
+  font-size: 0.8em;
   line-height: 28px;
   text-align: center;
   color: #54565a;
